H3CIPMSJAVA-20180830/src/objects/SMS_Info__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SMS Info</relationshipLabel>
        <relationshipName>SMS_InfoToCase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Time__c</fullName>
        <label>Send Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Send</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>SMS Info</relationshipLabel>
        <relationshipName>SMS_InfoToWorkOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SMS Info</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Content__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Is_Check__c</columns>
        <columns>Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Send_Time__c</columns>
        <columns>Status__c</columns>
        <columns>WorkOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SI-{0000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>